--- a/zaki.conf
+++ b/zaki.conf
@@ -17,7 +17,7 @@
 
 print_info() 
 {
-    prin "${green}RizalXdzz"
+    prin "${green}KIZAKIXD"
  prin "${red}─────────────"
  prin  "DOCKER BY ZEY"
  prin "${green}─────────────"
